crib/scalar/k8s/ingress/v1/__snapshots__/TestNewIngress_CustomizeCreatedScalar_1.snap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: api
    app.kubernetes.io/instance: test-app-123
    app.kubernetes.io/name: test-app
  name: api-ingress
  namespace: test-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 80
            path: /api
            pathType: Prefix
